# LedgerKeePass

./: .gitignore  Dockerfile  README.md  env.sh  nanox_sdk.patch  protocol.md
.github/workflows/: packages.yml  tests.yml
app/: Makefile
app/src/: approve.c  approve.h  globals.h  instrs.c  instrs.h  main.c  menu.c  menu.h  nv_state.h  x25519.c  x25519.h
ci/: docker_tests.sh
kp2/: kp2.sln
kp2/LedgerKeePass/: LedgerKeePass.csproj  ckpl.cs  plugin.cs
libkpl/: CMakeLists.txt
libkpl/cmake/: FindHIDAPI.cmake  Findsodium.cmake  kpl-config.cmake
libkpl/include/kpl/: app_errors.h  errors.h  errors_vals.def  exports.h  kpl.h  kpl_csts.h  ledger_answer.h  ledger_client.h  ledger_device.h  version.h
libkpl/include/kpl/c_api/: errors.h  exports.h  kpl.h  ledger_device.h
libkpl/src/: CMakeLists.txt  compat.h  dongleComm.c  dongleCommHid.h  dongleCommProxy.c  dongleCommProxy.h  errors.cpp  instrs.h  intmem.h  kpl.cpp  ledger_answer.cpp  ledger_client.cpp  ledger_device.cpp  ledger_device_tcp.cpp  ledger_device_tcp.h  ledger_device_usb.cpp  ledger_device_usb.h  secbuf.h  version.cpp
libkpl/src/c_api/: CMakeLists.txt  kpl_c.cpp  ledger_device_c.cpp  wrap.h
libkpl/tools/: CMakeLists.txt  derive.cpp  erase_all_slots.cpp  get.cpp  get_slots.cpp  list_devices.cpp  set.cpp  utils.cpp  utils.h
tests/: app_base.py  app_case.py  libkpl.py  pykpl.py  requirements.txt  run.py  run.sh  run_speculos.py  setup_speculos.py  test_app.py  test_lib.py  test_py.py
